--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,45 @@ version: "3"
 
 services:
   kutt:
-    image: kutt/kutt
+    # image: kutt/kutt
+    build: .
     depends_on:
       - postgres
       - redis
     command: ["./wait-for-it.sh", "postgres:5432", "--", "npm", "start"]
     ports:
-      - "3000:3000"
+      - 3001:3001
+    volumes:
+      - ./.env:/usr/src/app/.env:ro
     env_file:
-      - .env
-    environment:
-      DB_HOST: postgres
-      DB_NAME: kutt
-      DB_USER: user
-      DB_PASSWORD: pass
-      REDIS_HOST: redis
+      - ./.env
 
   redis:
     image: redis:6.0-alpine
+    ports:
+      - 6379:6379
     volumes:
       - redis_data:/data
 
   postgres:
     image: postgres:12-alpine
+    ports:
+      - 5432:5432
     environment:
+      POSTGRES_DB: kutt
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
-      POSTGRES_DB: kutt
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  adminer:
+    depends_on:
+      - postgres
+    image: adminer
+    restart: always
+    ports:
+      - 8083:8080
+    
 
 volumes:
   redis_data:
